--- a/.github/workflows/ci-linux-ros.yml
+++ b/.github/workflows/ci-linux-ros.yml
@@ -6,6 +6,8 @@ jobs:
     strategy:
       matrix:
         env:
+          - {ROS_DISTRO: noetic, CMAKE_BUILD_TYPE: Debug}
+          - {ROS_DISTRO: noetic, CMAKE_BUILD_TYPE: Release}
           - {ROS_DISTRO: humble, CMAKE_BUILD_TYPE: Debug}
           - {ROS_DISTRO: humble, CMAKE_BUILD_TYPE: Release}
     env:
