--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,8 @@
   <build_depend>git</build_depend>
   <build_depend>doxygen</build_depend>
   <depend>eigen</depend>
-  <depend>simde</depend>
+  <depend condition="$ROS_DISTRO == humble">simde</depend>
+  <depend condition="$ROS_DISTRO == rolling">simde</depend>
   <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
   <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
   <depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</depend>
